# Orrery

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  bacon.toml  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.cate/: workspace.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/orrery/: Cargo.toml  README.md  build.rs
crates/orrery-app/: Cargo.toml  README.md
crates/orrery-app/assets/: generate-icons.mjs
crates/orrery-app/src/: assets.rs  card.rs  data.rs  drawer.rs  icon.rs  live.rs  main.rs  markdown.rs  palette.rs  shell.rs  task.rs  text_input.rs  theme.rs
crates/orrery-app/src/views/: cleanup.rs  devtools.rs  explore.rs  feed.rs  inbox.rs  mod.rs  newproject.rs  settings.rs
crates/orrery-core/: Cargo.toml
crates/orrery-core/src/: activity.rs  ai.rs  cache.rs  config.rs  enrich.rs  forge.rs  git_ops.rs  inbox.rs  launch.rs  lib.rs  llama.rs  model.rs  oauth.rs  scan.rs  search.rs  semantic.rs  summarize.rs
crates/orrery-platform/: Cargo.toml
crates/orrery-platform/src/: agents.rs  appearance.rs  krunner.rs  lib.rs  notifier.rs  notify.rs  shortcut.rs  tray.rs  watcher.rs
crates/orrery/assets/: generate-icons.mjs
crates/orrery/src/: assets.rs  card.rs  data.rs  drawer.rs  heatmap.rs  live.rs  main.rs  palette.rs  shell.rs  task.rs  theme.rs
crates/orrery/src/views/: agents.rs  cleanup.rs  devtools.rs  explore.rs  feed.rs  inbox.rs  mod.rs  newproject.rs  settings.rs
docs/: index.md  rendering-performance.md
docs/.vitepress/: config.mts
docs/design-system/: README.md
docs/design-system/chats/: chat1.md
docs/design-system/project/: .thumbnail  README.md  SKILL.md  colors_and_type.css
docs/design-system/project/preview/: brand-spinner.html  brand-wordmark.html  colors-accents.html  colors-foreground.html  colors-languages.html  colors-space.html  colors-status.html  components-buttons.html  components-cmdk.html  components-repo-card.html  components-search.html  spacing-elevation.html  spacing-radii.html  type-body.html  type-display.html  type-mono.html
docs/design-system/project/ui_kits/orrery-desktop/: Feed.jsx  README.md  app.jsx  components.jsx  data.js  icons.jsx  index.html  overlays.jsx  styles.css
docs/guide/: configuration.md  fleet.md  getting-started.md  inbox-feed-explore.md  introduction.md  launchers.md  local-ai.md  maintenance.md  mission-control.md  notifications.md  repo-drawer.md
native-spike/: Cargo.toml  README.md  rust-toolchain.toml
native-spike/src/: data.rs  main.rs  shell.rs  theme.rs
packaging/: appimage.sh
packaging/aur/: .SRCINFO  PKGBUILD  README.md  orrery.desktop
scripts/: dev-clean.sh  setup.sh
src/: index.css  main.tsx  router.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/llama-runtime/: .gitkeep
src-tauri/src/: ai.rs  appearance.rs  cache.rs  cli.rs  commands.rs  config.rs  forge.rs  git_ops.rs  inbox.rs  krunner.rs  launch.rs  lib.rs  llama.rs  main.rs  model.rs  notifier.rs  oauth.rs  scan.rs  search.rs  tray.rs  watcher.rs
src/components/: BrandIcon.tsx  CommandPalette.tsx  ContributionGraph.test.ts  ContributionGraph.tsx  FleetBar.tsx  HostIcon.tsx  LangIcon.tsx  ModelSelect.tsx  NewProjectDialog.tsx  NotesPanel.tsx  PrPanel.tsx  RepoCard.tsx  RepoDrawer.tsx  ScanProgress.tsx  Spinner.tsx  VirtualGrid.tsx  VirtualList.tsx  VirtualRepoGrid.tsx
src/components/layout/: AppShell.tsx  GridFacets.tsx  Sidebar.tsx
src/components/tools/: registry.tsx
src/components/ui/: command.tsx
src/hooks/: useSystemAppearance.ts
src/lib/: appearance.test.ts  appearance.ts  brand-icons.ts  format.test.ts  format.ts  ipc.ts  lang-icons.ts  last-visit.ts  launchers.test.ts  launchers.ts  mock-activity.ts  mock-repos.ts  motion.ts  nav-counts.ts  repo-filter.test.ts  repo-filter.ts  repo-tags.test.ts  repo-tags.ts  repos-context.tsx  saved-views.test.ts  saved-views.ts  sidebar-slot.tsx  tools.test.ts  tools.ts
src/pages/: AgentsView.tsx  ExploreView.tsx  FeedView.tsx  GridView.tsx  InboxView.tsx  JanitorView.tsx  SettingsView.tsx  ToolsView.tsx
