# Workspace for Orrery — a clean native Rust app, no webview. The Tauri shell
# and React frontend that used to live alongside this were removed at cutover.
[workspace]
resolver = "2"
members = [
    "crates/orrery-core",     # logic: scan/git/forge/inbox/ai/cache/config/launch
    "crates/orrery-platform", # desktop integration: appearance/tray/notify/watcher
    "crates/orrery",          # the GPUI desktop app (UI + binary)
]

# Keep app release builds reasonably fast; GPUI's compile dominates regardless.
[profile.release]
opt-level = 2
