# Phase 0 native spike — throwaway. Renders the repo grid in GPUI (Zed's
# GPU-native toolkit) against the REAL Orrery SQLite cache, so we can measure
# CPU on the NVIDIA/WebKitGTK pain path vs. the Tauri build. Not wired into any
# workspace; lives entirely on the `spike/native-gpui` branch.
[package]
name = "orrery-native-spike"
version = "0.0.0"
edition = "2021"
publish = false

# Explicit empty workspace so cargo doesn't try to adopt src-tauri's crate.
[workspace]

[[bin]]
name = "orrery-native-spike"
path = "src/main.rs"

[dependencies]
# GPU-native UI toolkit (the thing under test). Pinned to a Zed release tag for
# reproducibility; not published to crates.io, so pulled from git.
gpui = { git = "https://github.com/zed-industries/zed", tag = "v1.6.3" }
# v1.6.3 moved platform construction out of gpui; the default window/Vulkan
# platform factory now lives here. Same tag so the `Platform` trait unifies.
# A compositor feature is REQUIRED on Linux — without one gpui_linux compiles out
# its compositor arms and panics with `unreachable!()` at startup. This box is a
# Wayland session, so `wayland` alone suffices; add "x11" too if you run under
# Xorg (needs the libxkbcommon-x11 dev library to link).
gpui_platform = { git = "https://github.com/zed-industries/zed", tag = "v1.6.3", features = ["wayland"] }

# Reused verbatim from the core via #[path] includes (model.rs + cache.rs):
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

# Lint policy. clippy::all defaults to warn already; pinning it here makes the
# intent explicit and lets a CI run flip to -D warnings. The reused core
# (model.rs/cache.rs) carries its own `#[allow(clippy::all)]`, so this only
# governs the spike's own code.
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"

# Keep the spike's own build fast; gpui's first build dominates regardless.
[profile.release]
opt-level = 2
