[package]
name = "orrery"
version = "0.1.0"
description = "every repo in orbit — a Linux-native command center for your git repos"
authors = ["Hankanman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orrery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native desktop integration: read the XDG Desktop Portal appearance settings
# (color-scheme + accent-color) and subscribe to live changes over D-Bus.
zbus = "5"
futures-util = "0.3"

