[package]
name = "orrery"
version = "0.1.0"
description = "every repo in orbit — a Linux-native command center for your git repos"
authors = ["Hankanman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orrery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native desktop integration: read the XDG Desktop Portal appearance settings
# (color-scheme + accent-color) and subscribe to live changes over D-Bus.
zbus = "5"
futures-util = "0.3"

# Repo discovery + metadata
git2 = "0.19"                                              # libgit2 (vendored)
walkdir = "2"                                              # repo scanning
globset = "0.4"                                            # ignore-glob matching
toml = "0.8"                                               # config file
dirs = "5"                                                 # XDG config/data paths
which = "6"                                                # detect IDE/terminal on PATH
rusqlite = { version = "0.32", features = ["bundled"] }    # cache (SQLite bundled)
notify-debouncer-mini = "0.4"                              # inotify live-watch (debounced)

# Git host providers (GitHub / GitLab) — async HTTP + JSON
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

# Linux-only: reach the underlying WebKitGTK view to force the accelerated
# compositor to stay engaged. Pinned to the version wry links so the types unify.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", features = ["v2_40"] }


# Release profile tuned for size (these bundles ship to users). strip drops
# symbols (~the unstripped 28M binary), LTO + a single codegen unit shrink and
# can speed up the result. Keeps the default opt-level (3) so the perf work
# isn't traded away. Helps deb/rpm most; the AppImage is dominated by WebKit.
[profile.release]
strip = true
lto = true
codegen-units = 1
