# orrery-app — the native GPUI desktop app. Depends on orrery-core for all
# logic; carries the UI (theme, cards, shell, views). Will be renamed to
# `orrery` at cutover, once the legacy Tauri shell (src-tauri/) is deleted.
[package]
name = "orrery-app"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "orrery-app"
path = "src/main.rs"

[dependencies]
# All logic lives here now — no more #[path] includes of the core.
orrery-core = { path = "../orrery-core" }
# Desktop integration (system accent / appearance, …).
orrery-platform = { path = "../orrery-platform" }

# GPU-native UI toolkit. Pinned to the exact Zed rev that gpui-component tracks,
# so both resolve to one gpui (git deps unify by url + rev). Not on crates.io.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
# Platform/window factory; features match gpui-component's so its components and
# our window construction agree. A compositor feature is REQUIRED on Linux.
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
# Component library: multiline input, markdown, switches/dropdowns/lists, etc.
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

# Embed the SVG icon assets into the binary (no runtime file deps), served to
# GPUI through an AssetSource. Icons are generated/committed under assets/icons/.
rust-embed = "8"

# Send desktop signals (filesystem watch / attention poll / appearance change)
# from their background threads onto the GPUI foreground. async-channel's
# Receiver is awaitable inside a gpui task; its Sender is Send + Clone.
async-channel = "2"

# The shared runtime that drives async (reqwest-backed) core calls — forge/inbox/
# ai/oauth — whose results marshal onto the GPUI foreground (see task.rs). gpui
# has no tokio reactor, so network UI data needs an in-app runtime.
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

# Dev Tools view — offline utility belt (UUID, hash, base64/url, JSON, …).
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
serde_json = "1"
urlencoding = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
