# orrery-platform — Linux desktop integration with no UI and no Tauri. The home
# for what used to live behind Tauri plugins/AppHandle: appearance (XDG portal +
# kdeglobals), and later tray, global shortcut, notifications, file watching.
# Both the legacy Tauri app and the native GPUI app consume it.
[package]
name = "orrery-platform"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
# Logic: scan/config for the file-watcher, inbox/oauth/cache for the poller.
orrery-core = { path = "../orrery-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"         # attention-snapshot dedupe
zbus = "5"               # D-Bus: appearance portal + desktop notifications
futures-util = "0.3"     # signal stream
tokio = { version = "1", features = ["rt", "time"] }  # drive the poll interval (+ reqwest) off the UI thread
notify-debouncer-mini = "0.4"                 # inotify live-watch (debounced)
# StatusNotifierItem tray (pure D-Bus, no GTK). async-io backend to match gpui's
# zbus (its portal/accessibility connections); the tokio backend would force
# every zbus connection in the process — including gpui's — through tokio and
# panic them. `blocking` gives a synchronous spawn/update API (ksni owns the
# thread + executor), so the app needs no extra runtime for the tray.
ksni = { version = "0.3.5", default-features = false, features = ["async-io", "blocking"] }
png = "0.18"             # decode the tray glyph PNGs to ARGB for the SNI pixmap

[lints.clippy]
all = "warn"
