# orrery — the native GPUI desktop app. Depends on orrery-core for all logic;
# carries the UI (theme, cards, shell, views). This is the whole product now
# that the legacy Tauri shell (src-tauri/) and React frontend are gone.
[package]
name = "orrery"
version = "0.2.0"
edition = "2024"
publish = false
description = "every repo in orbit — a Linux-native command center for your git repos"
license = "MIT"
repository = "https://github.com/Hankanman/Orrery"

[[bin]]
name = "orrery"
path = "src/main.rs"

[dependencies]
# All logic lives here now — no more #[path] includes of the core.
orrery-core = { path = "../orrery-core" }
# Desktop integration (system accent / appearance, …).
orrery-platform = { path = "../orrery-platform" }

# GPU-native UI toolkit. Pinned to the exact Zed rev that gpui-component tracks,
# so both resolve to one gpui (git deps unify by url + rev). Not on crates.io.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
# Platform/window factory; features match gpui-component's so its components and
# our window construction agree. A compositor feature is REQUIRED on Linux.
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
# Component library: multiline input, markdown, switches/dropdowns/lists, etc.
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

# Embed the SVG icon assets into the binary (no runtime file deps), served to
# GPUI through an AssetSource. Icons are generated/committed under assets/icons/.
rust-embed = "8"

# Send desktop signals (filesystem watch / attention poll / appearance change)
# from their background threads onto the GPUI foreground. async-channel's
# Receiver is awaitable inside a gpui task; its Sender is Send + Clone.
async-channel = "2"

# The shared runtime that drives async (reqwest-backed) core calls — forge/inbox/
# ai/oauth — whose results marshal onto the GPUI foreground (see task.rs). gpui
# has no tokio reactor, so network UI data needs an in-app runtime.
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

# Dev Tools view — offline utility belt (UUID, hash, base64/url, JSON, …).
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
serde_json = "1"
urlencoding = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"

# ── Linux packaging ──────────────────────────────────────────────────────────
# `.deb` via cargo-deb. Asset source paths are relative to this manifest dir;
# `target/release/` is special-cased to the workspace target dir.
[package.metadata.deb]
maintainer = "Seb Burrell <sebburrell@outlook.com>"
copyright = "2026, Seb Burrell"
license-file = ["../../LICENSE", "0"]
extended-description = "Orrery is a Linux-native command center for your git repos: a fast GPU-rendered desktop dashboard that scans your workspace, surfaces status/PRs/CI at a glance, and launches your IDE or agent."
section = "devel"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/orrery", "usr/bin/", "755"],
    ["../../packaging/orrery.desktop", "usr/share/applications/", "644"],
    ["../../packaging/icons/32x32.png", "usr/share/icons/hicolor/32x32/apps/orrery.png", "644"],
    ["../../packaging/icons/64x64.png", "usr/share/icons/hicolor/64x64/apps/orrery.png", "644"],
    ["../../packaging/icons/128x128.png", "usr/share/icons/hicolor/128x128/apps/orrery.png", "644"],
    ["../../packaging/icons/icon.png", "usr/share/icons/hicolor/512x512/apps/orrery.png", "644"],
    ["../../LICENSE", "usr/share/licenses/orrery/LICENSE", "644"],
]

# `.rpm` via cargo-generate-rpm. Run from the workspace root, so source paths are
# relative to it.
[package.metadata.generate-rpm]
summary = "every repo in orbit — a Linux-native command center for your git repos"
license = "MIT"
assets = [
    { source = "target/release/orrery", dest = "/usr/bin/orrery", mode = "755" },
    { source = "packaging/orrery.desktop", dest = "/usr/share/applications/orrery.desktop", mode = "644" },
    { source = "packaging/icons/32x32.png", dest = "/usr/share/icons/hicolor/32x32/apps/orrery.png", mode = "644" },
    { source = "packaging/icons/64x64.png", dest = "/usr/share/icons/hicolor/64x64/apps/orrery.png", mode = "644" },
    { source = "packaging/icons/128x128.png", dest = "/usr/share/icons/hicolor/128x128/apps/orrery.png", mode = "644" },
    { source = "packaging/icons/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/orrery.png", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/orrery/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
fontconfig = "*"
